--- a/css/style.css
+++ b/css/style.css
@@ -923,11 +923,14 @@ select {
 body.dark .section {
   background-color: #151515;
 }
+body.dark .contact .contact-form .form-item .form-control,
+body.dark .blog .blog-item-inner .blog-info,
 body.dark .service .service-item .service-item-inner,
 body.dark .about .about-content .timeline,
 body.dark .aside {
   background-color: #222222;
 }
+body.dark .contact .contact-info-item h4,
 body.dark .portfolio .portfolio-filter button,
 body.dark .service .service-item .service-item-inner h4,
 body.dark .about .about-content .timeline .timeline-title,
@@ -940,6 +943,9 @@ body.dark .aside .logo a,
 body.dark .aside .nav li a {
   color: #ffffff;
 }
+body.dark .contact .contact-form .form-item .form-control,
+body.dark .contact .contact-info-item p,
+body.dark .blog .blog-item-inner .blog-info .blog-title,
 body.dark .service .service-item .service-item-inner p,
 body.dark .about .about-content .timeline .timeline-text,
 body.dark .about .about-content .timeline .timeline-date,
@@ -950,10 +956,16 @@ body.dark .about .about-content .about-text p,
 body.dark .home .intro p {
   color: #e9e9e9;
 }
+body.dark .aside,
+body.dark .contact .contact-form .form-item .form-control,
+body.dark .blog .blog-item-inner,
+body.dark .blog .blog-item-inner .blog-info .blog-tags,
+body.dark .blog .blog-item-inner .blog-info .blog-discription,
+body.dark .portfolio .portfolio-item-inner,
 body.dark .service .service-item .service-item-inner,
 body.dark .about .about-content .timeline,
 body.dark .about .about-content .personal-info .info-item p,
-body.dark .aside.nav li a {
+body.dark .aside .nav li a {
   border-color: #393939;
 }
 body.dark .shadow-dark {
