--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,45 @@ select {
   min-height: 100vh;
   display: block;
   padding: 0 30px;
+  position: fixed;
+  left: 270px;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  opacity: 1;
+}
+
+.section.back-section {
+  z-index: 1;
+}
+.section.active {
+  opacity: 1;
+  z-index: 2;
+  -webkit-animation: slideSection 1s ease;
+  animation: slideSection 1s ease;
+}
+@-webkit-keyframes slideSection {
+  0% {
+    -wbkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+  100% {
+    -wbkit-transform: translateX(0%);
+    transform: translateX(0%);
+  }
+}
+@keyframes slideSection {
+  0% {
+    -wbkit-transform: translateX(100%);
+    transform: translateX(100%);
+  }
+  100% {
+    -wbkit-transform: translateX(0%);
+    transform: translateX(0%);
+  }
 }
 .section .container {
   padding-top: 60px;
@@ -80,10 +119,6 @@ select {
 .padd-15 {
   padding-left: 15px;
   padding-right: 15px;
-}
-
-.maim-content {
-  padding-left: 270px;
 }
 
 .container {
@@ -975,11 +1010,16 @@ body.dark .shadow-dark {
 /* Responsive */
 
 @media (max-width: 1199px) {
+  .aside .nav-toggler {
+    display: -ms-flex;
+    display: flex;
+    left: 30px;
+  }
   .aside {
     left: -270px;
   }
-  .maim-content {
-    padding-left: 0;
+  .section {
+    left: 0;
   }
   .about .about-content .personal-info .info-item p span {
     display: block;
