--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,8 @@ select {
   overflow-x: hidden;
   overflow-y: auto;
   opacity: 1;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 
 .section.back-section {
@@ -164,6 +166,8 @@ select {
   z-index: 10;
   border-right: 1px solid #e8dfec;
   padding: 30px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 .aside .logo {
   padding: 30px 0;
@@ -202,7 +206,7 @@ select {
   cursor: pointer;
   position: fixed;
   left: 300px;
-  top: 30px;
+  top: 20px;
   z-index: 11;
   border-radius: 5px;
   background-color: #fdf9ff;
@@ -213,12 +217,17 @@ select {
   align-items: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
 }
 .aside .nav-toggler span {
   height: 2px;
   width: 18px;
   display: inline-block;
   position: relative;
+}
+.aside .nav-toggler.open span {
+  background-color: transparent;
 }
 .aside .nav-toggler span::before {
   content: "";
@@ -228,6 +237,12 @@ select {
   top: -6px;
   left: 0;
 }
+.aside .nav-toggler.open span::before {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  top: 0;
+}
+
 .aside .nav-toggler span::after {
   content: "";
   height: 2px;
@@ -235,6 +250,11 @@ select {
   position: absolute;
   top: 6px;
   left: 0;
+}
+.aside .nav-toggler.open span::after {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  top: 0;
 }
 
 .aside .nav {
@@ -1015,11 +1035,20 @@ body.dark .shadow-dark {
     display: flex;
     left: 30px;
   }
+  .aside .nav-toggler.open {
+    left: 300px;
+  }
   .aside {
     left: -270px;
   }
+  .aside.open {
+    left: 0;
+  }
   .section {
     left: 0;
+  }
+  .section.open {
+    left: 270px;
   }
   .about .about-content .personal-info .info-item p span {
     display: block;
