updating media query

--- a/css/style.css
+++ b/css/style.css
@@ -1092,6 +1092,12 @@ body.dark .shadow-dark {
 }
 /* Responsive */
 
+@media (max-width: 1339px) {
+  .about .about-content .personal-info .info-item p span {
+    display: block;
+    margin-left: 0;
+  }
+}
 @media (max-width: 1199px) {
   .section .container {
     padding-top: 70px;
